src/wrapper.zig

pub extern fn ffgcf(fptr: [*c]fitsfile, datatype: c_int, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: ?*anyopaque, nullarray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcvs(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, nulval: [*c]u8, array: [*c][*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcl(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgcvl(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, nulval: u8, array: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcvb(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, nulval: u8, array: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcvsb(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, nulval: i8, array: [*c]i8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcvui(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, nulval: c_ushort, array: [*c]c_ushort, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcvi(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, nulval: c_short, array: [*c]c_short, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcvuj(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, nulval: c_ulong, array: [*c]c_ulong, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcvj(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, nulval: c_long, array: [*c]c_long, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcvujj(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, nulval: ULONGLONG, array: [*c]ULONGLONG, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcvjj(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, nulval: LONGLONG, array: [*c]LONGLONG, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcvuk(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, nulval: c_uint, array: [*c]c_uint, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcvk(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, nulval: c_int, array: [*c]c_int, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcve(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, nulval: f32, array: [*c]f32, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcvd(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, nulval: f64, array: [*c]f64, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcvc(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, nulval: f32, array: [*c]f32, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcvm(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, nulval: f64, array: [*c]f64, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcx(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstbit: LONGLONG, nbits: LONGLONG, larray: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgcxui(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, nrows: LONGLONG, firstbit: c_long, nbits: c_int, array: [*c]c_ushort, status: [*c]c_int) c_int;
pub extern fn ffgcxuk(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, nrows: LONGLONG, firstbit: c_long, nbits: c_int, array: [*c]c_uint, status: [*c]c_int) c_int;
pub extern fn ffgcfs(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c][*c]u8, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcfl(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]u8, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcfb(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]u8, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcfsb(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]i8, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcfui(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_ushort, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcfi(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_short, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcfuj(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_ulong, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcfj(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_long, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcfujj(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]ULONGLONG, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcfjj(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]LONGLONG, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcfuk(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_uint, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcfk(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_int, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcfe(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]f32, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcfd(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]f64, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcfc(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]f32, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgcfm(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]f64, nularray: [*c]u8, anynul: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffgdes(fptr: [*c]fitsfile, colnum: c_int, rownum: LONGLONG, length: [*c]c_long, heapaddr: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffgdesll(fptr: [*c]fitsfile, colnum: c_int, rownum: LONGLONG, length: [*c]LONGLONG, heapaddr: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffgdess(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, nrows: LONGLONG, length: [*c]c_long, heapaddr: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffgdessll(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, nrows: LONGLONG, length: [*c]LONGLONG, heapaddr: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffpdes(fptr: [*c]fitsfile, colnum: c_int, rownum: LONGLONG, length: LONGLONG, heapaddr: LONGLONG, status: [*c]c_int) c_int;
pub extern fn fftheap(fptr: [*c]fitsfile, heapsize: [*c]LONGLONG, unused: [*c]LONGLONG, overlap: [*c]LONGLONG, valid: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffcmph(fptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffgtbb(fptr: [*c]fitsfile, firstrow: LONGLONG, firstchar: LONGLONG, nchars: LONGLONG, values: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffgextn(fptr: [*c]fitsfile, offset: LONGLONG, nelem: LONGLONG, array: ?*anyopaque, status: [*c]c_int) c_int;
pub extern fn ffpextn(fptr: [*c]fitsfile, offset: LONGLONG, nelem: LONGLONG, array: ?*anyopaque, status: [*c]c_int) c_int;
pub extern fn ffppx(fptr: [*c]fitsfile, datatype: c_int, firstpix: [*c]c_long, nelem: LONGLONG, array: ?*anyopaque, status: [*c]c_int) c_int;
pub extern fn ffppxll(fptr: [*c]fitsfile, datatype: c_int, firstpix: [*c]LONGLONG, nelem: LONGLONG, array: ?*anyopaque, status: [*c]c_int) c_int;
pub extern fn ffppxn(fptr: [*c]fitsfile, datatype: c_int, firstpix: [*c]c_long, nelem: LONGLONG, array: ?*anyopaque, nulval: ?*anyopaque, status: [*c]c_int) c_int;
pub extern fn ffppxnll(fptr: [*c]fitsfile, datatype: c_int, firstpix: [*c]LONGLONG, nelem: LONGLONG, array: ?*anyopaque, nulval: ?*anyopaque, status: [*c]c_int) c_int;
pub extern fn ffppr(fptr: [*c]fitsfile, datatype: c_int, firstelem: LONGLONG, nelem: LONGLONG, array: ?*anyopaque, status: [*c]c_int) c_int;
pub extern fn ffpprb(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffpprsb(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]i8, status: [*c]c_int) c_int;
pub extern fn ffpprui(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_ushort, status: [*c]c_int) c_int;
pub extern fn ffppri(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_short, status: [*c]c_int) c_int;
pub extern fn ffppruj(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_ulong, status: [*c]c_int) c_int;
pub extern fn ffpprj(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffppruk(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_uint, status: [*c]c_int) c_int;
pub extern fn ffpprk(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffppre(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]f32, status: [*c]c_int) c_int;
pub extern fn ffpprd(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]f64, status: [*c]c_int) c_int;
pub extern fn ffpprjj(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffpprujj(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]ULONGLONG, status: [*c]c_int) c_int;
pub extern fn ffppru(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffpprn(fptr: [*c]fitsfile, firstelem: LONGLONG, nelem: LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffppn(fptr: [*c]fitsfile, datatype: c_int, firstelem: LONGLONG, nelem: LONGLONG, array: ?*anyopaque, nulval: ?*anyopaque, status: [*c]c_int) c_int;
pub extern fn ffppnb(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]u8, nulval: u8, status: [*c]c_int) c_int;
pub extern fn ffppnsb(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]i8, nulval: i8, status: [*c]c_int) c_int;
pub extern fn ffppnui(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_ushort, nulval: c_ushort, status: [*c]c_int) c_int;
pub extern fn ffppni(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_short, nulval: c_short, status: [*c]c_int) c_int;
